Make first-use gate regression test Android-compatible